--- a/qa-studio/package.json
+++ b/qa-studio/package.json
@@ -8,6 +8,7 @@
     "dev:client": "vite",
     "dev:server": "node --watch server/index.js",
     "build": "vite build",
+    "vercel-build": "vite build",
     "preview": "vite preview",
     "test": "vitest --run",
     "lint": "eslint src --ext .js,.jsx"
